sandbox/output
StringCalculator.java:10: error: cannot find symbol
            String[] parts = inputs.split(",");
                             ^
  symbol:   variable inputs
  location: class StringCalculator
1 error
